@@ -1,3 +1,12 @@
+2026-02-16T02:42:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22048314646 # 879
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-16
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 53 637 / 55 639
+* notice: next accum: outdated-unq outdated-all / unq all: 53 637 / 54 638
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [] / []
+
 2026-02-14T02:32:44Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/22009562026 # 877
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-14
